--- a/newThread.html
+++ b/newThread.html
@@ -3,28 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forum - ${thread.title}</title>
+    <title>Forum - New Thread</title>
     ${head}
 </head>
 <body>
     <h1 class= "text-center">An Expressly Express Forum</h1>
 
    <main class = "container"> 
-    <!-- <div class="my-3 p-3 bg-white rounded box-shadow"> -->
+   
     <div class="nes-container is-dark with-title">
-        <p class="title">${thread.title}</p>
+        <p class="title">New Thread</p>
         <!-- <div class = "list-group"> -->
     
     <!-- <h3>${thread.title}</h3> -->
-    <p>${thread.content}</p>
-        </br>
-    <div class = "lists is-dark">
-    <ul class = "nes-list is-dark is-disc comment-list">
-        ${thread.comments.map((comment) => {
-           return  `<li>${comment.name} - "${comment.content}"</li>`
-        }).join('')}
-    </ul>
-    </div>
+    
     <div style="background-color:#212529; padding: 1rem;" class="nes-field is-inline ">
         <label for="textarea_field text-small">leave a comment</label>
         <textarea id="textarea_field" class="nes-textarea is-dark"></textarea>
@@ -32,7 +24,7 @@
 
 
       </div>
-      <button type="submit" class="nes-btn from-left " >Comment</button>
+      <button type="submit" class="nes-btn from-left " >Submit</button>
     </div>      
     <div class ="d-flex justify-content-around">
     <a href="/threads">View A list of threads</a>
